02_service_deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: intro-k8s
spec:
  replicas: 5
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin:1.0.1
          imagePullPolicy: Always
          name: httpbin
          ports:
            - containerPort: 80
