02_service_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: intro-k8s
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: httpbin
